@startuml

interface Representation

Representation : numpy.array value()

class TextRepresentation implements Representation

class TextFileRepresentation extends TextRepresentation


interface Detector

Detector : float: score(invader: Representation, shingle: Shingle)

class SimpleDetector implements Detector

class Shingle {
        Tuple[int, int] : row_index_range
        Tuple[int, int] col_index_range
        numpy.array : contents
        Any : empty_value
}

interface Renderer

Renderer : render(screen: Representation, detections: List[numpy.array])

class StandardOutputRenderer implements Renderer

class Tracker

Tracker : List[numpy.array] get_detection_masks(invaders: List[Representation])

class App

App : run()

App --* Tracker
App --* Renderer

Tracker --* "many" Representation
Tracker --* Detector
Tracker --* "many" Shingle

Renderer --* Representation

@enduml